index css quase finalizado faltou: responsividade das linhas (todas) responsividade do footer links para outras páginas

--- a/style.css
+++ b/style.css
@@ -99,6 +99,8 @@ body {
     padding: 0.8rem;
 }
 
+
+
 /* bg-white h-[16rem] w-[14rem] flex flex-col items-center p-3 */
 
 .link-index {
@@ -218,16 +220,36 @@ body {
 .info-add{
     display: flex;
     flex-direction: row;
+    padding: 5rem;
+    gap: 0.4rem;
 }
-
-.titulo-info-add span{
-    writing-mode:vertical-rl;
-}
-
-.linha-info-add{
+    
+.linha-info-add {
     width: 1px;
     background-color: black;
-    height: 180px;
+    height: 100px;
+}
+
+.titulo-info-add {
+    font-size: 1.5rem;
+    color: #98C1D9;
+    font-weight: 500;
+    font-family: "Homenaje", sans-serif;
+    display: inline-block; /* Necessário para aplicar transformações */
+    transform: rotate(-90deg);
+    /* max-height: 750px;
+    max-width: 750px; */
+}
+
+.div-texto-info-add {
+    display: flex;
+    flex-direction: row;
+    gap: 0.4rem;
+}
+
+.bold-info-add {
+    font-weight: 600;
+    color:#3D5A80
 }
 
 @media (max-width: 600px) {
@@ -243,7 +265,67 @@ body {
         background-color: black;
         height: 220px;
     }
+
+    .linha-info-add {
+        width: 1px;
+        background-color: black;
+        height: 340px;
+    }
+
+    .titulo-info-add {
+        font-size: 1.5rem;
+        color: #98C1D9;
+        font-weight: 500;
+        font-family: "Homenaje", sans-serif;
+        display: block; /* ou outro valor desejado */
+        transform: none; /* remove a rotação */
+    }
+
+    .info-add{
+        display: flex;
+        flex-direction: column;
+        padding: 5rem;
+        gap: 0.4rem;
+        flex-wrap: wrap;
+    }
+
+    .div-texto-info-add {
+        display: flex;
+        flex-direction: row;
+        gap: 0.4rem;
+    }
+
 }
+
+#rodape {
+    display: flex;
+    flex-direction: row;
+    background-color: #3D5A80;
+    padding: 1rem;
+    gap: 8rem;
+}
+
+.informacoes-rodape {
+    display: flex;
+    flex-direction: column;
+    gap: 0.8rem;
+}
+
+.titulos-rodape {
+    display: flex;
+    gap: 43rem;
+    margin-left: -1rem;
+    font-weight: 600;
+    color: white;
+}
+
+.informacoes2-rodape {
+    display: flex;
+    gap: 5rem;
+    color: #EEEEEE;
+}
+
+/* novo arquivo */
 
 .docente{
     display: flex;
