--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ body {
 }
 
 #links-index {
-    display:flex;
+    display: flex;
     flex-direction: row;
     justify-content: center;
     gap: 8rem;
@@ -535,5 +535,88 @@ body {
         left: 0;
         top: 0;
     }
+
+    .ano-disciplinas {
+        display: flex;
+        flex-direction: column;
+        padding: 5rem;
+        gap: 2rem;
+        margin-top: 12rem;
+    }
+
+    .docente, .destaque, .projeto{
+        display: flex;
+        flex-direction: row;
+       justify-content: center;
+       padding: 2rem;
+       gap: 4rem;
+       flex-wrap: wrap;
+       margin-top: 12rem;
+       
+    }
+
+    .links-index {
+        position: relative;
+        left: 0;
+        top: 0;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 8rem;
+        flex-wrap: wrap;
+        margin-top: -3rem;
+        padding: 0.8rem;
+    }
+
+    .link-index {
+        position: absolute;
+        
+    }
+
+    .link-outros {
+        position: absolute;
+        
+    }
+
+    #definicao-info-div {
+        display: flex;
+        flex-direction: row;
+        padding: 5rem;
+        margin-top: 20rem;
+        align-items: center;
+        gap: 3rem;
+    }
+
+    .voltar-link{
+        position: absolute;
+        color: white;
+        z-index: 10;
+        font-size: 2.5rem;
+        font-weight: 100;
+        left: 1%;
+        cursor: pointer;
+    }
+    .passar-link{
+        position: absolute;
+        
+        right: 1%;
+        color: white;
+        z-index: 10;
+        font-size: 2.5rem;
+        font-weight: 100;
+        cursor: pointer;
+    }
+
+    .voltar-link, .passar-link {
+        position: absolute;
+        display: flex;
+        justify-content: space-between;
+    }
+    
 }
+
+.voltar-link, .passar-link{
+    display: none;
+}
+
 
